uglify, finished face movement to center on click

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="site.css">
-    <script type="text/javascript" src="./dependencies/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="./lib/jquery-3.2.1.min.js"></script>
 
   </head>
 
@@ -27,12 +27,12 @@
         class="alex" 
         src="./assets/alex_small.png"
       >
-      <span class="greeting -is--hidden">
+      <span class="greeting">
         Hey there...
       </span>
     </div>
 
-    <script src="./face.js"></script>
+    <script src="./lib/face.js"></script>
 
   </body>
 </html>
