--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="site.css">
 
-    <title>Sup</title>
+    <title>AB</title>
     <meta charset="UTF-8">
     <script type="text/javascript" src="./lib/jquery-3.2.1.min.js"></script>
   </head>
