--- a/public/index.html
+++ b/public/index.html
@@ -10,29 +10,28 @@
       gtag('config', 'UA-114690291-1');
     </script>
 
-    <title>Alex</title>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="site.css">
-    <script type="text/javascript" src="./lib/jquery-3.2.1.min.js"></script>
 
+    <title>AB</title>
+    <meta charset="UTF-8">
+    <script type="text/javascript" src="./lib/jquery-3.2.1.min.js"></script>
   </head>
 
   <body>
 
     <div>
       <img
-        class="alex" 
-        src="./assets/alex_small.png"
+        class="bouncing_image" 
+        src="./assets/guard.png"
       >
       <span class="greeting">
-        Hey there...
+        Stop right there, criminal scum.
       </span>
     </div>
 
-    <script src="./lib/face.js"></script>
+    <script src="./lib/main.js"></script>
 
   </body>
 </html>
