--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114690291-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-114690291-1');
-    </script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NFH7GQ9');</script>
+  <!-- End Google Tag Manager -->
 
-    <link rel="stylesheet" href="site.css">
+  <title>AB</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="site.css">
+  <script type="text/javascript" src="./lib/jquery-3.2.1.min.js"></script>
+</head>
 
-    <title>AB</title>
-    <meta charset="UTF-8">
-    <script type="text/javascript" src="./lib/jquery-3.2.1.min.js"></script>
-  </head>
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NFH7GQ9" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
-  <body>
+  <div>
+    <img class="bouncing_image" src="./assets/guard.png">
+    <span class="greeting">
+      Stop right there, criminal scum.
+    </span>
+  </div>
 
-    <div>
-      <img
-        class="bouncing_image" 
-        src="./assets/guard.png"
-      >
-      <span class="greeting">
-        Stop right there, criminal scum.
-      </span>
-    </div>
+  <script src="./lib/main.js"></script>
 
-    <script src="./lib/main.js"></script>
+</body>
 
-  </body>
 </html>
